# metaodi-mcp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  fly.toml  openerz.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: health-check.yml
scripts/: install_tools.sh
tests/: README.md  __init__.py  test_health_check.py
